--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,22 @@
 {
-  "dependencies": {
-    "zustand": "^4.4.7"
-  }
+	"dependencies": {
+		"@emotion/react": "^11.11.3",
+		"@emotion/styled": "^11.11.0",
+		"@mui/material": "^5.15.5",
+		"next": "^14.1.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"zustand": "^4.4.7"
+	},
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"devDependencies": {
+		"@types/node": "20.11.5",
+		"@types/react": "18.2.48",
+		"typescript": "5.3.3"
+	}
 }
