--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
-		"start": "next start",
+		"start": "next run dev ",
 		"lint": "next lint"
 	},
 	"devDependencies": {
